cabal-version:       2.0
name:                ekg-core
version:             0.1.1.7
synopsis:            Tracking of system metrics
description:
  This library lets you defined and track system metrics.
homepage:            https://github.com/tibbe/ekg-core
bug-reports:         https://github.com/tibbe/ekg-core/issues
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          Johan Tibell <johan.tibell@gmail.com>,
                     Mikhail Glushenkov <mikhail.glushenkov@gmail.com>
category:            System
build-type:          Simple
extra-source-files:  CHANGES.md
tested-with:         GHC == 8.10.1, GHC == 8.8.3, GHC == 8.6.5,
                     GHC == 8.4.4,  GHC == 8.2.2, GHC == 8.0.2,
                     GHC == 7.10.3, GHC == 7.8.4, GHC == 7.6.3

library
  exposed-modules:
    System.Metrics
    System.Metrics.Counter
    System.Metrics.Distribution
    System.Metrics.Distribution.Internal
    System.Metrics.Gauge
    System.Metrics.Internal
    System.Metrics.Label
    System.Metrics.Static

  other-modules:
    Data.Array
    Data.Atomic
    System.Metrics.Static.Example
    System.Metrics.Static.GroupExample
    System.Metrics.ThreadId

  build-depends:
    ghc-prim < 0.7,
    base >= 4.6 && < 4.15,
    atomic-primops ^>= 0.8.4,
    containers >= 0.5 && < 0.7,
    hashable >= 1.3.0.0 && < 1.4,
    primitive ^>= 0.7.1.0,
    text < 1.3,
    unordered-containers < 0.3

  default-language:    Haskell2010

benchmark counter
  main-is: Counter.hs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    ekg-core,
    criterion ^>= 1.5.9.0
  default-language: Haskell2010
  hs-source-dirs: benchmarks
  ghc-options: -O2 -threaded -Wall

benchmark distribution
  main-is: Distribution.hs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    ekg-core,
    criterion ^>= 1.5.9.0
  default-language: Haskell2010
  hs-source-dirs: benchmarks
  ghc-options: -O2 -threaded -Wall

test-suite ekg-core-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Distribution
    State
  build-depends:
    base,
    ekg-core,
    generic-random ^>= 1.4.0.0,
    hspec ^>= 2.8.2,
    hspec-smallcheck ^>= 0.5.2,
    HUnit ^>= 1.6.2.0,
    QuickCheck ^>= 2.14.2,
    smallcheck ^>= 1.2.1,
    text < 1.3,
    unordered-containers < 0.3

source-repository head
  type:     git
  location: https://github.com/tibbe/ekg-core.git
